# HAL_K1921VG015

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/toolchain/: toolchain.cmake
exm/: CMakeLists.txt
exm/gpio/: CMakeLists.txt  main.cpp
exm/plic/: CMakeLists.txt  main.cpp
exm/rcu/: CMakeLists.txt  main.cpp
exm/simple/: CMakeLists.txt  main.cpp
exm/sys/: CMakeLists.txt
exm/sys/src/: syscalls.c
exm/uart/: CMakeLists.txt  main.cpp
hal/: CMakeLists.txt
hal/core/: CMakeLists.txt
hal/core/inc/: arch.h
hal/core/src/: sys_init.c
hal/core/start/: startup_k1921vg015.S
hal/gpio/: CMakeLists.txt
hal/gpio/inc/: hal_gpio.h
hal/gpio/src/: hal_gpio.cpp
hal/periph/: CMakeLists.txt
hal/periph/base/: hal_periphBase.h
hal/periph/communications/: CMakeLists.txt
hal/periph/communications/uart/: CMakeLists.txt
hal/periph/communications/uart/inc/: hal_uart.h
hal/periph/communications/uart/src/: hal_uart.cpp
hal/periph/gpio/: CMakeLists.txt
hal/periph/gpio/inc/: hal_gpio.h
hal/periph/gpio/src/: hal_gpio.cpp
hal/periph/plic/: CMakeLists.txt
hal/periph/plic/inc/: hal_plic.h
hal/periph/plic/src/: hal_plic.cpp
hal/periph/rcu/: CMakeLists.txt
hal/periph/rcu/inc/: hal_rcu.h
hal/periph/rcu/src/: hal_rcu.cpp
hal/rcu/: CMakeLists.txt
hal/rcu/inc/: hal_rcu.h  hal_rcu_def.h
hal/rcu/src/: hal_rcu.cpp
